# create-repository-vikosev24

./: CMakeLists.txt
data/: contacts.json
include/: application.h  data.h  glfw.h  logic.h  presentation.h
src/: application.cpp  data.cpp  glfw.cpp  logic.cpp  main.cpp  presentation.cpp
